[tool.poetry]
name = "robiemon_server"
version = "0.0.1"
description = ""
authors = ["endaaman"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["uvicorn"], version = "^0.109.0"}
sqlalchemy = "^2.0.25"
pydantic = "^1"
torch = "^2.1.2"
timm = "^0.9.12"
opencv-python-headless = "^4.9.0.80"
grad-cam = "^1.5.0"
numpy = "^1.26.3"
python-multipart = "^0.0.6"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
pillow = "^10.2.0"
sqlite-web = "^0.6.3"

[tool.poetry.group.dev.dependencies]
jedi-language-server = "^0.41.2"

[build-system]

[tool.poetry.scripts]
dev = "robiemon_server.app:dev"
prod = "robiemon_server.app:prod"
admin = "sqlite_web data/server.db"
